manifests/django/django-amp-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
spec:
  defaultBackend:
    service:
      name: django-service
      port:
        number: 8000
